GEODE-10521: Eliminate reflection-based access to java.nio.Buffer internals (#7956)
Replace reflection-based access to DirectByteBuffer private APIs with
Unsafe field offset access, eliminating the need for
--add-opens=java.base/java.nio=ALL-UNNAMED JVM flag.

Key Changes:
- Enhanced Unsafe wrapper with buffer field access methods
  * Added cached field offsets (BUFFER_ADDRESS_FIELD_OFFSET, BUFFER_CAPACITY_FIELD_OFFSET)
  * Added getBufferAddress/setBufferAddress methods
  * Added getBufferCapacity/setBufferCapacity methods
  * Field offset access does NOT require --add-opens flags

- Refactored AddressableMemoryManager to eliminate reflection
  * Removed all reflection imports (Constructor, Method, InvocationTargetException)
  * Removed static volatile reflection caching fields
  * Reimplemented getDirectByteBufferAddress() using Unsafe.getBufferAddress()
  * Reimplemented createDirectByteBuffer() using field manipulation
  * Maintains zero-copy semantics by modifying buffer fields

- Removed JAVA_NIO_OPEN flag from MemberJvmOptions
  * Deleted JAVA_NIO_OPEN constant and documentation
  * Removed flag from JAVA_11_OPTIONS list
  * Reduced required JVM flags from 5 to 4

Benefits:
- Eliminates security audit findings for --add-opens usage
- Improves Java module system compliance
- Compatible with Java 17+ strong encapsulation (JEP 403)
- Forward compatible with Java 21
- Simplifies deployment configuration
- Better performance through cached field offsets
- Enables GraalVM native image compilation

This change is part of the broader initiative to eliminate all
--add-opens and --add-exports flags from Apache Geode for full
Java module system compliance.